--- a/styles.css
+++ b/styles.css
@@ -13,40 +13,24 @@ body {
     margin: 20px;
   }
   
-  ol {
+  ul {
     margin: 20px;
     padding-left: 40px;
+    list-style: none;
   }
   
   li {
     margin-top: 10px;
   }
   
-  label {
-    display: block;
-    margin: 20px;
-  }
-  
-  input[type="number"] {
-    margin: 5px 0;
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  button[type="submit"] {
-    margin: 10px;
-    padding: 5px;
-    border-radius: 5px;
-    border: none;
-    background-color: blue;
-    color: white;
-    cursor: pointer;
-  }
-  
   img {
     display: block;
     margin: 20px auto;
     max-width: 100%;
+    border-radius: 10px;
+  }
+  
+  #boys-image {
+    display: none;
   }
   
