--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,48 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  p {
-    margin: 20px;
-  }
-  
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
+
+p {
+  margin: 20px;
+}
+
+ul {
+  margin: 20px;
+  padding-left: 40px;
+  list-style: none;
+}
+
+li {
+  margin-top: 10px;
+}
+
+img {
+  display: block;
+  margin: 20px auto;
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+#boys-image {
+  display: none;
+}
+
+@media screen and (min-width: 600px) {
   ul {
-    margin: 20px;
-    padding-left: 40px;
-    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
   }
-  
+
   li {
-    margin-top: 10px;
+    width: 50%;
+    padding: 10px;
+    box-sizing: border-box;
   }
-  
-  img {
-    display: block;
-    margin: 20px auto;
-    max-width: 100%;
-    border-radius: 10px;
-  }
-  
-  #boys-image {
-    display: none;
-  }
-  
+}
